--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
 
 	"name": "pathcomics",
 	"version": "0.0.1",
-	"contributors": []
+	"contributors": [],
+	"dependencies": {
+		"coffeetalk": "*"
+	}
 }
